# fountain

./: .travis.yml  Cargo.toml  README.md
src/: fountain.rs  lib.rs  ltcode.rs  main.rs  soliton.rs
tests/: lib.rs  ltcodetests.rs
