[package]
name = "fountaincode"
version = "0.0.3"
authors = ["Christoph Doblander <chris@degree.at>"]

description = "Implementation of the Luby Transform Code in Rust"
homepage = "https://github.com/chrido/fountain"
repository = "https://github.com/chrido/fountain.git"
license = "MIT"
keywords = ["FEC", "ForwardErrorCorrection", "FountainCode"]

[dependencies]
rand = "0.3.11"
